# fastapi-datatables

./: main.py  pyproject.toml  requirements.txt  students.db
datatables/: core.py  database.py  schema.py
src/datatables/: __init__.py  enum.py  utils.py
