[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp-datatables"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
]

[project.urls]
Homepage = "https://github.com/Rohit-kumar-raja/fastapi-datatables"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "faker>=40.5.1",
    "fastapi>=0.134.0",
    "uvicorn>=0.41.0",
]
